<resources>
    <string name="app_name">PregnancyAdviceApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_reg">Register</string>
    <string name="menu_login">Login</string>
    <string name="password_hint">Enter your password\n</string>
    <string name="password_home">Password</string>
    <string name="text_hint">Enter your name</string>
    <string name="name_home">Name</string>
    <string name="more_info">more info look at this</string>
    <string name="url_url">https://www.bing.com/</string>
    <string name="desc_img_login">Image for login</string>
    <string name="menu_preventive">Preventive measures</string>
    <string name="desc_preventive">Her you will get the technique that you can use to prevent unwwanted pregnancy click on the bellow button</string>
    <string name="preventive_support">Preventive Support</string>
    <string name="emotional_support">Emotional support</string>
    <string name="desc_emotional">get the emotionl support you need to manage or overcome the stress that is coming up during prgnancy</string>
    <string name="emotional_support_btn">Emotional Support</string>
    <string name="consult_a_doctor">consult a doctor</string>
    <string name="desc_doc">make an appointment the doctor for a visit at the hospital</string>
    <string name="visit_doctor">Visit Doctor</string>
    <string name="preventive">image_cond</string>
    <string name="phrase_uid">The device is a T-shaped plastic frame that releases a type of hormone called progestin12. This hormone prevents pregnancy in two ways: it thickens the mucus on your cervix to block sperm, and it can also stop eggs from
        leaving your ovaries (ovulation), which means there’s no egg for a sperm to fertilize.</string>
    <string name="phrase_pills">Also known as birth control pills, are a safe, simple, and convenient method to prevent pregnancy.
        They work by releasing hormones (estrogen and progestin) that prevent ovulation, meaning there’s
        no egg for sperm to fertilize.Effectiveness: When used correctly, contraceptive pills offer great protection against pregnancy.
        Ease of Use: All you need to do is take one pill every day. It’s even easier if you take it at the same time each day.
        Additional Benefits: Besides preventing pregnancy, contraceptive pills can also reduce acne, make your periods lighter and more regular,
        and ease menstrual cramps. They can even reduce your risk of certain cancers.
        Control: If you decide you want to get pregnant, you can simply stop taking the pill</string>
    <string name="phrase_seemore">see more >></string>
    <string name="phrase_navhome">Home menu</string>

    <string name="phrase_condom">Knowledge is power, and safety is paramount. Unwrap the facts, protect your future</string>
    <string name="phrase_diagphragm">The diaphragm is a shallow, bendable silicone cup that you insert inside
        your vagina. It covers your cervix during sex to prevent pregnancy1. When used correctly with spermicide
        (a cream or gel that kills sperm), it can be an effective method of contraception1. However, it’s important
        to note that diaphragms are not as effective as some other methods of contraception, such as the pill, implant,
        and intrauterine devices (IUDs)</string>
    <string name="phrase_abstinence">The ultimate control. It’s not about missing out, it’s about choosing your moment.
        It’s the only method that’s 100% effective against pregnancy and STIs. It’s not just a choice, it’s a lifestyle of
        self-discipline and respect for your future. Remember, your body, your rules.” Stay informed, stay safe</string>
    <string name="age_hint">Enter your age here</string>
    <string name="email_hint">Enter your email address</string>

</resources>